--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Start of Profile Section -->
         <section class="row bg-warning justify-content-center align-items-center py-4 py-lg-5" id="landing">
             <div class="col-6 col-md-3 p-3 py-lg-5">
-                <img src="/images/profile.jpg" class="rounded-circle border border-dark img-fluid">
+                <img src="./images/profile.jpg" class="rounded-circle border border-dark img-fluid">
             </div>
             <div class="col-md-7 col-lg-5 pl-md-5 py-lg-5">
                 <h1 class="mt-2 text-center text-md-left text-light">Gil D.</h1>
@@ -195,22 +195,22 @@
                 <div class="row">
                     <div class="col-3 ">
                         <div class="p-2">
-                            <a href="https://www.facebook.com" target="_blank"><img src="/images/fb.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
+                            <a href="https://www.facebook.com" target="_blank"><img src="./images/fb.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
                         </div>
                     </div>
                     <div class="col-3 ">
                         <div class="p-2">
-                            <a href="https://www.tiktok.com" target="_blank"><img src="images/tiktok.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
+                            <a href="https://www.tiktok.com" target="_blank"><img src="/.images/tiktok.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
                         </div>
                     </div>
                     <div class="col-3 ">
                         <div class="p-2">
-                            <a href="https://www.youtube.com" target="_blank"><img src="/images/youtube.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
+                            <a href="https://www.youtube.com" target="_blank"><img src="./images/youtube.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
                         </div>
                     </div>
                     <div class="col-3 ">
                         <div class="p-2">
-                            <a href="https://www.x.com" target="_blank"><img src="/images/x.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
+                            <a href="https://www.x.com" target="_blank"><img src="./images/x.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
                         </div>
                     </div>
                 </div>
