Readded capstone 1 with correct linking

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Main Div -->
     <div class="pt-5">
         <!-- Start of Profile Section -->
-        <section class="row bg-warning justify-content-center align-items-center py-4 py-lg-5" id="landing">
+        <section class="row justify-content-center align-items-center py-4 py-lg-5" id="landing">
             <div class="col-6 col-md-3 p-3 py-lg-5">
                 <img src="./images/profile.jpg" class="rounded-circle border border-dark img-fluid">
             </div>
@@ -200,7 +200,7 @@
                     </div>
                     <div class="col-3 ">
                         <div class="p-2">
-                            <a href="https://www.tiktok.com" target="_blank"><img src="/.images/tiktok.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
+                            <a href="https://www.tiktok.com" target="_blank"><img src="./images/tiktok.png" alt="Responsive image" class="img-fluid w-50 h-50"></a>
                         </div>
                     </div>
                     <div class="col-3 ">
